# Lawn_paths

./: .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg
map_builder/: fscore.py  main.py  shapefile.py
path_recognition/: dataloaders.py  dl_models.py  functions.py  main.ipynb  main_config.yaml  utils.py  walking_paths.py
preliminary_markup/: functions.py  pipeline.py
preliminary_markup/pipeline_model_v2/: saved_model.pb
preliminary_markup/pipeline_model_v2/variables/: variables.index
results/: paths.dbf  paths.shp  paths.shx
src/lawn_paths/map_builder/: lawn_paths.qgz  main.py  shapefile.py
src/lawn_paths/pipeline/: dataloaders.py  functions.py  main_config.yaml  pipeline.py  pipeline_checkpoint.ckpt  unet_models.py  utils.py  walking_paths.py
visual_build/: about.html  index.html  main.py  map.html  other.py  style.css  test_eel.py
visual_build/map/: main.py  shapefile.py  visualize.py
