[metadata]
name = lawn_paths
author = Kadmus Dev
author_email = denikozub@gmail.com
description = Lawn paths recognition system.
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Documentation = https://github.com/Denikozub/kadmus-dev#documentation
    Source = https://github.com/Denikozub/kadmus-dev

[options]
python_requires = >=3.8
packages = lawn_paths
package_dir =
    =src
zip_safe = no
install_requires =
    Eel
	geopandas
	matplotlib
	mplleaflet
	numpy
	Pillow
	rdp
	scikit-image
	Shapely
	pytorch-lightning
	pytorch-ranger
	pytorch-toolbelt
	torch
	torch-optimizer
	torchmetrics
	torchsummary
	torchvision
	rtree